fixed the temperture chart visibility bug

--- a/application/app.less
+++ b/application/app.less
@@ -16,6 +16,7 @@ body {
 }
 
 dashboard-temperature {
+    display: block;
     background: white;
 }
 
